# algos-apps

./: .env  .gitignore  README.md  requirements.txt
algos-angular/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
algos-angular/src/: index.html  styles.scss
algos-java/: README.md  pom.xml
algos-quarkus/: README.md  pom.xml
ch01/: calculation_pi.py  unbreakable_encryption.py
ch02/: maze.py
ch04/: dijkstra.py  graph.py  graph_test.py  mst.py  weighted_graph.py  weighted_graph_test.py
java-algos/: pom.xml
py-algos-angular/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
py-algos-angular/src/: index.html
py-algos-react/: .gitignore  package-lock.json  package.json
py-algos-react/src/: TreeView.tsx
py_algos/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
py_algos/generic_search/: generic_search.py  maze.py
py_algos/notebooks/: complexity.ipynb
py_algos/src/py_algos_eseidinger/complexity/: varianttree.py
py_algos/src/py_algos_eseidinger/generic_search/: generic_search.py  maze.py
py_algos/tests/: test_generic_search.py  test_varianttree.py
python-algos-ui/: .eslintrc.json  README.md  angular.json  package-lock.json  package.json
python-algos-ui/src/: index.html
python_algos/: .gitignore  requirements.txt
python_algos/ch01/: calculation_pi.py  fib.py  hanoi.py  trivial_compression.py
python_algos/ch02/: dna_search.py  generic_search.py  maze.py
python_algos/ch03/: csp.py  map_coloring.py
ts-algos/: README.md  package-lock.json  package.json  tsconfig.json
(+177 files in other folders)
