[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[project]
name = "py_algos_eseidinger"
version = "0.0.1"
authors = [
  { name="Emanuel Seidinger", email="dev@eseidinger.de" },
]
description = "A collection of algorithms and data structures"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "sympy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/eseidinger/python-algos"

[tool.hatch.envs.hatch-test]
default-args = ["tests"]
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
